# kalan_core_bot

./: .dockerignore  .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/bot/: app.py  config.py  container.py
app/bot/database/: __init__.py  models.py  schema.py  session.py
app/bot/handlers/: __init__.py  commands.py  health.py  media.py  replies.py  start.py  text.py
app/bot/keyboards/: __init__.py  media.py  start.py
app/bot/repositories/: __init__.py  kalans.py  media_messages.py  text_messages.py  users.py
app/bot/services/: __init__.py  kalans.py  media_messages.py  message_replies.py  text_messages.py  user_store.py  users.py
app/bot/utils/: access.py  media.py
tests/: test_commands.py  test_config.py  test_media_keyboard.py  test_start_onboarding.py  test_text_replies.py
