[project]
name = "kalan-core-bot"
version = "0.1.0"
description = "Telegram bot service for Kalan Core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.6,<4.0",
    "asyncpg>=0.29,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
